fix alignments and links

--- a/css/design.css
+++ b/css/design.css
@@ -104,7 +104,6 @@ ul.posts li {
 }
 
 /* CV */
-.cv { margin: 0px 0px 60px; }
 .cv h1 { font-size: 3em; }
 .cv h2 { font-size: 2em; }
 .cv address, .cv .download { font-family: 'Helvetica', 'Arial', 'Sans-Serif'; }
